<resources>
    <string name="app_name">פשוט טעים</string>
    <string name="cashier">קופה</string>
    <string name="cafeteria">קפיטריה</string>
    <string name="catering">קיטרינג</string>
    <string name="design">עיצוב אירועים</string>
    <string name="clerk">מכירה</string>
    <string name="orderMenu">הזמנה</string>
    <string name="cancelDelivery">ביטול משלוח</string>
    <string name="paymentCatering">תשלום</string>
    <string name="paypalPayement">תשלום באמצעות PayPal (בתוספת עמלה)</string>
    <string name="cashPayement">תשלום במזומן לאיילה</string>
    <string name="choosePaymentMethod">בחרו צורת תשלום</string>
    <string name="finishOrderCatering">שליחת הזמנה לאיילה</string>
    <string name="cateringPaidConfirm">תשלום בוצע בהצלחה!</string>
    <string name="alreadyPaid">כבר שילמת עבור הזמנה זו</string>
    <string name="cantAddItemsCatering">אין אפשרות להוסיף פריטים לאחר תשלום, עלייך לבצע הזמנה חדשה</string>
    <string name="newOrderTxt">הזמנה חדשה</string>
    <string name="phoneNum">טלפון:</string>
    <string name="nullPayment">0.0</string>
    <string name="cashPayment">סכום לתשלום במזומן: </string>
    <string name="paidInPaypal">הסכום השולם: </string>
    <string name="paidMail">[שולם] </string>
    <string name="notPaidMail">[לא שולם] </string>
    <string name="newOrderRUSure">הזמנה חדשה תמחוק את ההזמנה הנוכחית, האם להמשיך?</string>
    <string name="longPress">לחיצה ארוכה על פריט מאפשרת שינוי כמות, או מחיקה.</string>
    <string name="dontShowAgain">אל תציג שוב</string>
    <string name="attention">שימו לב! הפריטים הבאים אינם כלולים בתשלום: </string>
    <string name="deliveryString">משלוח לבית הלקוח</string>
    <string name="breadString">סלסלת לחמים</string>
    <string name="forDetails">לפרטים, ניתן ליצור קשר עם איילה.</string>
    <string name="facebookButton">Facebook</string>
    <string name="payaplButton">PayPal</string>
    <string name="menu">תפריט</string>
    <string name="quiche">קיש</string>
    <string name="plates">פלטות</string>
    <string name="pastaCatering">פסטות</string>
    <string name="breadCatering">לחמים</string>
    <string name="desserts">קינוחים</string>
    <string name="foucachas">פוקצ\'ות</string>
    <string name="childrenCatering">מומלץ לילדים</string>
    <string name="rentThePlace">השכרת האולם</string>
    <string name="deliveryCatering">משלוח בתשלום</string>
    <string name="hugeSaladCatering">סלט ענק</string>
    <string name="hugeSaladCatering1">[סלט] חסה, פטריות, עגבניות שרי, בצל סגול, ויניגרט</string>
    <string name="orderStringLettuceSalad">סלט חסה, פטריות, עגבניות שרי</string>
    <string name="hugeSaladCatering2">[סלט] חסה, עלי בייבי, בטטה מוקפצת, עגבניות שרי, בצל סגול, גרעיני חמנייה קלויים</string>
    <string name="orderStringYamSalad">סלט חסה, עלי בייבי, בטטה מוקפצת</string>
    <string name="hugeSaladCatering3">[סלט] כרוב, חמוציות, שבבי שקדים קלויים, בצל ירוק, רוטב סיני</string>
    <string name="orderStringCabbageSaladCatering">סלט כרוב</string>
    <string name="hugeSaladCatering4">[סלט סביח] חסה, גמבה, מלפפון חמוץ, חציל מטוגן, גרגירי חומוס, ביצים קשות, רוטב טחינה</string>
    <string name="orderStringSabiaSaladCatering">סלט סביח</string>
    <string name="lentilSaladCateringIngre">[סלט] עדשים שחורות, גבינה, בולגרית, בטטה</string>
    <string name="quinoaSaladCateringIngre">[סלט] קינואה, חמוציות, גרעיני חמנייה</string>
    <string name="tunaSaladCateringIngre">[סלט] טונה, מיונז, מלפפון חמוץ, גמבה, בצל סגול</string>
    <string name="mushroomQuicheCateringIngre">קיש פטריות</string>
    <string name="yamQuicheCateringIngre">קיש בטטה</string>
    <string name="broccoliQuicheCateringIngre">קיש ברוקולי</string>
    <string name="onionQuicheCateringIngre">קיש בצל</string>
    <string name="whiteEggplantCateringIngre">[פלטה] חציל, לבנה, נגיעות גמבה קלויה, שום</string>
    <string name="quinoaHashBrownsCateringIngre">[פלטה] לביבות קינואה</string>
    <string name="lentilHashBrownsCateringIngre">[פלטה] לביבות עדשים שחורות</string>
    <string name="antipastiCateringIngre">[אנטי פסטי] חציל, גמבה במגוון צבעים, בצל, סגול, בטטה, שומר</string>
    <string name="cheesePlateCateringIngre">[פלטה] גבינות צהובות, צפתית, בולגרית, בלקנית</string>
    <string name="sandPlateCateringIngre">[פלטה] רבעי בגט במילויים עשירים ומגוונים</string>
    <string name="veggiePlateCateringIngre">[פלטה] עגבניות שרי, מלפפון, גזר, תירס גמדי, פטריות, שומר, גמבות במבחר צבעים, רוטב שום</string>
    <string name="orderStringVeggiePlate">פלטת ירקות</string>
    <string name="smokedFishPlateCatering">[פלטה] דגים מעושנים</string>
    <string name="sandAmountCatering">יחידות</string>
    <string name="noteToA">הסכום לתשלום אינו כולל את הפריטים הבאים:</string>
    <string name="youNeedPayPal">בשביל לבצע הזמנה, עלייך להצטייד בחשבון PayPay.</string>
    <string name="createPayPal">פתיחת חשבון PayPal</string>
    <string name="createPayPalLater">אחר כך</string>
    <string name="tortillaPlateCatering">טורטיות ממולאות</string>
    <string name="eggplantPlateWhiteCatering">חציל ולבנה</string>
    <string name="orderStringeggplantPlateWhiteCatering">פלטת חציל ולבנה</string>
    <string name="hashbrownPlateCatering">לביבות</string>
    <string name="antipastiPlateCatering">אנטיפסטי</string>
    <string name="cheesePlateCatering">גבינות</string>
    <string name="orderStringcheesePlateCatering">פלטת גבינות</string>
    <string name="sandPlateCatering">סנדוויצ\'ים</string>
    <string name="orderStringsandPlateCatering">פלטת סנדוויצ\'ים</string>
    <string name="veggiPlateCatering">ירקות</string>
    <string name="pescadoPlateCatering">דגים מעושנים</string>
    <string name="orderStringpescadoPlateCatering">פלטת דגים מעושנים</string>
    <string name="tortillaFilling1">פסטו, פטה, גמבה קלוייה, רוקט</string>
    <string name="tortillaFilling2">סלט טונה</string>
    <string name="tortillaFilling3">חציל, פטה, גמבה קלוייה, קורט</string>
    <string name="tortillaFilledWith">פלטת טורטיות במילוי:</string>
    <string name="pastaType1Catering">[פסטה] ברוטב שמנת פטריות</string>
    <string name="pastaType2Catering">[פסטה] ברוטב עגבניות</string>
    <string name="orangeSoupCatering">[מרק] כתום</string>
    <string name="onionSoupCatering">[מרק] בצל</string>
    <string name="lentilSoupCatering">[מרק] עדשים כתומות</string>
    <string name="foucachasCateringIng">מגש פוקצ\'ות עם עשבי תיבול</string>
    <string name="breadBasketCateringIng">סלסלת לחמניות מקמח מלא ולחמי מחמצת במגוון טעמים</string>
    <string name="dessertCateringIng">מנות אחרונות ועוגות</string>
    <string name="chocolatePieCateringIng">פאי שוקולד</string>
    <string name="nutPieCateringIng">פאי אגוזים</string>
    <string name="cheesePieCateringIng">פאי גבינה</string>
    <string name="berriesPieCateringIng">פאי פירות יער</string>
    <string name="TAGunchecked">unchecked</string>
    <string name="TAGchecked">checked</string>
    <string name="lentilSaladCatering">סלט עדשים</string>
    <string name="quinoaSaladCatering">סלט קינואה</string>
    <string name="tunaSaladCatering">סלט טונה</string>
    <string name="eggSaladCatering">סלט ביצים</string>
    <string name="eggplantSaladCatering">סלט חצילים אדום</string>
    <string name="thiniSaladCatering">סלט טחינה ירוק</string>
    <string name="avocadoSaladCatering">סלט אבוקדו</string>
    <string name="hugeSaladPrice">185 ש\"ח\nמספיק ל 10-12 אנשים</string>
    <string name="lentilSaladPrice">160 ש\"ח\nמספיק ל 10 אנשים</string>
    <string name="tunaSaladPrice">150 ש\"ח\nמספיק ל 12 אנשים</string>
    <string name="quichePrice">110 ש\"ח\nמספיק ל 10-12 אנשים</string>
    <string name="tortillaPrice">200 ש\"ח\nמספיק ל 12 אנשים</string>
    <string name="whiteEggplantPrice">100 ש\"ח\nמספיק ל 10 אנשים</string>
    <string name="hashBrownPrice">100 ש\"ח\n20 יחידות\nמוגש עם רוטב שמנת</string>
    <string name="antipastiPrice">195 ש\"ח\nמספיק ל 10 אנשים\nמוגש עם חומץ בלסמי ושום</string>
    <string name="cheesePlatePrice">200 ש\"ח\nמספיק ל 10 אנשים</string>
    <string name="sandPlatePrice">כל יחידה 10 ש\"ח\nמומלץ 1.5-2 יחידות לאדם</string>
    <string name="veggiePlatePrice">110 ש\"ח\nמספיק ל 10 אנשים</string>
    <string name="smokedFishPlatePrice">200 ש\"ח\nמספיק ל 10 אנשים</string>
    <string name="pastaCateringPrice">160 ש\"ח\nמספיק ל 10 אנשים</string>
    <string name="soupCateringPrice">250 ש\"ח\nמספיק ל 35 אנשים</string>
    <string name="viewOrder">צפייה בהזמנה</string>
    <string name="foucachasCateringPrice">000 ש\"ח\nמספיק ל 000 אנשים</string>
    <string name="breadBasketCateringPrice">מחיר תלוי בכמות שתוזמן</string>
    <string name="dessertsCateringPrice">150 ש\"ח</string>
    <string name="childrenCateringPriceVeggie">[110 ש\"ח]</string>
    <string name="childrenCateringPricePasta">[160 ש\"ח]</string>
    <string name="rentThePlacePrice">400 ש\"ח</string>
    <string name="pieCateringPrice">[150 ש\"ח]</string>
    <string name="cupsCateringPrice">[120 ש\"ח]</string>
    <string name="rentThePlaceIng">השכרת האולם - עד 50 איש</string>
    <string name="employee_name">שם</string>
    <string name="password">סיסמה</string>
    <string name="wrong_password">סיסמה שגויה</string>
    <string name="nil"></string>
    <string name="inShift">במשמרת</string>
    <string name="outShift">לא במשמרת</string>
    <string name="hours">דו\"ח שעות</string>
    <string name="hoursText">סה\"כ שעות לחודש דצמבר</string>
    <string name="sendHours">שליחת דו\"ח שעות</string>
    <string name="exit">לצאת מהקופה?</string>
    <string name="yes">כן</string>
    <string name="no">לא</string>
    <string name="timeTen">10:00</string>
    <string name="timeTwelve">12:00</string>
    <string name="timeOne">13:30</string>
    <string name="timeThree">15:30</string>
    <string name="notes">הערות...</string>
    <string name="noEntries">לא נמצאו נתונים עבור תאריך זה</string>
    <string name="manualUpdate">עדכון ידני</string>
    <string name="startHour">התחלה:</string>
    <string name="endHour">סיום:</string>
    <string name="updateHr">עדכון</string>
    <string name="successHrUpdate">עדכון בוצע בהצלחה!</string>
    <string name="date">תאריך:</string>
    <string name="clearPurchaseReport">מחיקת דו\"ח מכירות</string>
    <string name="cancel">ביטול</string>
    <string name="report">דו\"ח מכירות</string>
    <string name="updatePrice">עדכון מחירים</string>
    <string name="classicView">קופה בסיסית</string>
    <string name="can5">פחית\n5</string>
    <string name="can6">פחית\n6</string>
    <string name="capuccino">נס קפה\n5</string>
    <string name="choco">שוקו\n3</string>
    <string name="hotChoco">שוקו חם\n5</string>
    <string name="iceCoffee5">אייס\n5</string>
    <string name="iceCoffee7">אייס\n7</string>
    <string name="lemonade5">לימונדה\n5</string>
    <string name="lemonade7">לימונדה\n7</string>
    <string name="orange5">תפוזים\n5</string>
    <string name="orange7">תפוזים\n7</string>
    <string name="water">מים\n5</string>
    <string name="slurpee5">ברד\n5</string>
    <string name="slurpee7">ברד\n7</string>
    <string name="pastry_hint">pastry</string>
    <string name="croissant_hint">croissant</string>
    <string name="burk_hint">burk</string>
    <string name="pizza_hint">pizza</string>
    <string name="melawac_hint">melawac</string>
    <string name="croissant">קוראסון</string>
    <string name="chocCroissant">שוקולד\n7</string>
    <string name="cheeseCroissant">גבינית\n7</string>
    <string name="butterCroissant">חמאה\n7</string>
    <string name="cinnamonCroissant">קינמון\n7</string>
    <string name="donut">דונאט\n6</string>
    <string name="burek">בורקס</string>
    <string name="burekCheese">גבינה\n7</string>
    <string name="burekPotato">תפו\"א\n7</string>
    <string name="plusEgg">+ ביצה\n10</string>
    <string name="melawacText">מלאווח</string>
    <string name="melawac">מלאווח\n9.5</string>
    <string name="pizzaText">פיצה</string>
    <string name="pizza">רגילה\n6</string>
    <string name="pizzaPlus">+ תוספות\n7</string>
    <string name="pizzaBulgarian">+ בולגרית\n3</string>
</resources>