<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Welcome">

    <item
        android:id="@+id/reportMenu"
        android:title="@string/report"
        app:showAsAction="never"
        >
    </item>

    <!--
    <item
        android:id="@+id/endShiftMenu"
        android:title="@string/endShift"
        app:showAsAction="never">
    </item>
    -->

    <item
        android:id="@+id/updatePrices"
        android:title="@string/updatePrice"
        app:showAsAction="never">


    </item>

    <item
        android:id="@+id/hours"
        android:title="@string/hours"
        app:showAsAction="never">


    </item>

    <item
        android:id="@+id/classicView"
        android:title="@string/classicView"
        app:showAsAction="never">

    </item>

    <item
        android:id="@+id/clerk"
        android:title="@string/clerk"
        app:showAsAction="never">
    </item>



</menu>