<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:gravity="center"
    android:layoutDirection="ltr"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_gravity="center"
            >
            <!-- todo add tags! important for sharedPrefs, add and handle onClicks, consider changing to 4 in one row instead of 3-->
            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/shape"
                android:layout_marginRight="7dp"
                android:text="@string/slurpee5"
                android:textStyle="bold"/>
            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/shape"
                android:layout_marginRight="7dp"
                android:layout_marginLeft="7dp"
                android:text="@string/iceCoffee7"
                android:textStyle="bold"/>
            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/shape"
                android:layout_marginLeft="7dp"
                android:text="@string/iceCoffee5"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_gravity="center">
            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/shape"
                android:layout_marginRight="7dp"
                android:text="@string/lemonade7"
                android:textStyle="bold"/>
            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/shape"
                android:layout_marginRight="7dp"
                android:layout_marginLeft="7dp"
                android:text="@string/lemonade5"
                android:textStyle="bold"/>
            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/shape"
                android:layout_marginLeft="7dp"
                android:text="@string/slurpee7"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_gravity="center">

            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/shape"
                android:layout_marginRight="7dp"
                android:text="@string/hotChoco"
                android:textStyle="bold"/>
            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/shape"
                android:layout_marginRight="7dp"
                android:layout_marginLeft="7dp"
                android:text="@string/orange7"
                android:textStyle="bold"/>
            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/shape"
                android:layout_marginLeft="7dp"
                android:text="@string/orange5"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_gravity="center">
            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/shape"
                android:layout_marginRight="7dp"
                android:text="@string/can5"
                android:textStyle="bold"/>
            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/shape"
                android:layout_marginRight="7dp"
                android:layout_marginLeft="7dp"
                android:text="@string/capuccino"
                android:textStyle="bold"/>
            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/shape"
                android:layout_marginLeft="7dp"
                android:text="@string/choco"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_gravity="center">

            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/shape"
                android:layout_marginRight="7dp"
                android:text="@string/water"
                android:textStyle="bold"/>
            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/shape"
                android:layout_marginRight="7dp"
                android:layout_marginLeft="7dp"
                android:text="@string/can6"
                android:textStyle="bold"/>

        </LinearLayout>




    </LinearLayout>

</RelativeLayout>