<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:gravity="center"
    android:layoutDirection="ltr"
    android:layout_weight="1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/croissant"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="3"
            >


            <Button
                android:id="@+id/cinnamonCroissantButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/shape"
                android:layout_marginRight="2dp"
                android:text="@string/cinnamonCroissant"
                android:textStyle="bold"
                android:tag="@string/cinnamonCroissant"
                android:onClick="chooseItem"
                android:clickable="true"
                android:hint="@string/croissant_hint"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/butterCroissantButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/shape"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/butterCroissant"
                android:textStyle="bold"
                android:tag="@string/butterCroissant"
                android:onClick="chooseItem"
                android:clickable="true"
                android:hint="@string/croissant_hint"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/cheeseCroissantButton"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:background="@drawable/shape"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:text="@string/cheeseCroissant"
                android:textStyle="bold"
                android:tag="@string/cheeseCroissant"
                android:onClick="chooseItem"
                android:clickable="true"
                android:hint="@string/croissant_hint"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/chocCroissantButton"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:background="@drawable/shape"
                android:layout_marginLeft="2dp"
                android:text="@string/chocCroissant"
                android:textStyle="bold"
                android:tag="@string/chocCroissant"
                android:onClick="chooseItem"
                android:clickable="true"
                android:hint="@string/croissant_hint"
                android:layout_weight="1"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/burek"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="5"
            >


            <Button
                android:id="@+id/donutButton"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:background="@drawable/shape"
                android:layout_marginRight="2dp"
                android:text="@string/donut"
                android:textStyle="bold"
                android:tag="@string/donut"
                android:onClick="chooseItem"
                android:clickable="true"
                android:hint="@string/pastry_hint"
                android:layout_weight="1"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/turq"
                android:layout_weight="1"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"></View>

            <Button
                android:id="@+id/eggBurektButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/shape"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/plusEgg"
                android:textStyle="bold"
                android:tag="@string/plusEgg"
                android:onClick="chooseItem"
                android:clickable="true"
                android:hint="@string/burk_hint"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/cheeseBurekButton"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:background="@drawable/shape"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/burekCheese"
                android:textStyle="bold"
                android:tag="@string/burek"
                android:onClick="chooseItem"
                android:clickable="true"
                android:hint="@string/burk_hint"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/poratoBurektBuutton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/shape"
                android:layout_marginLeft="2dp"
                android:text="@string/burekPotato"
                android:textStyle="bold"
                android:tag="@string/burekPotato"
                android:onClick="chooseItem"
                android:clickable="true"
                android:hint="@string/burk_hint"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pizzaText"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="3">



            <Button
                android:id="@+id/bulgarianPizzaButton"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:background="@drawable/shape"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/pizzaBulgarian"
                android:textStyle="bold"
                android:tag="@string/pizzaBulgarian"
                android:onClick="chooseItem"
                android:clickable="true"
                android:hint="@string/pizza_hint"
                android:layout_weight="1"></Button>


            <Button
                android:id="@+id/pizzaPlusButton"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:background="@drawable/shape"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:text="@string/pizzaPlus"
                android:textStyle="bold"
                android:tag="@string/pizzaPlus"
                android:onClick="chooseItem"
                android:clickable="true"
                android:hint="@string/pizza_hint"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/pizzaButton"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:background="@drawable/shape"
                android:layout_marginLeft="2dp"
                android:text="@string/pizza"
                android:textStyle="bold"
                android:tag="@string/pizza"
                android:onClick="chooseItem"
                android:clickable="true"
                android:hint="@string/pizza_hint"
                android:layout_weight="1"/>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/melawacText"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="2"
            >



            <Button
                android:id="@+id/additionButton"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:background="@drawable/shape"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/plusEgg"
                android:textStyle="bold"
                android:tag="@string/plusEgg"
                android:onClick="chooseItem"
                android:clickable="true"
                android:layout_weight="1"
                android:hint="@string/melawac_hint"/>

            <Button
                android:id="@+id/melawacbutton"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:background="@drawable/shape"
                android:layout_marginLeft="2dp"
                android:text="@string/melawac"
                android:textStyle="bold"
                android:tag="@string/melawac"
                android:onClick="chooseItem"
                android:clickable="true"
                android:layout_weight="1"
                android:hint="@string/melawac_hint"/>



            />


        </LinearLayout>




        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:backgroundTint="@color/red"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:textColor="@color/blanco"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:onClick="cancel"/>

    </LinearLayout>

</LinearLayout>