<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="watchtower.ayalacashier.Main"
    android:background="@drawable/background22"
    android:layoutDirection="ltr">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >

        <Button
            android:id="@+id/cafeteria"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:onClick="redirect"
            android:text="@string/cafeteria"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            />

        <Button
            android:id="@+id/catering"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:onClick="redirect"
            android:text="@string/catering"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            />

        <Button
            android:id="@+id/design"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:onClick="redirect"
            android:text="@string/design"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            />
    </LinearLayout>

</RelativeLayout>
